--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:run": "vitest run"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -24,10 +27,13 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/svelte": "^5.2.8",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"jsdom": "^27.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -36,12 +42,18 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^7.0.4"
+		"vite": "^7.0.4",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^7.0.0",
 		"@sveltejs/adapter-node": "^5.3.1",
 		"@tsparticles/slim": "^3.9.1",
-		"@tsparticles/svelte": "^3.1.1"
+		"@tsparticles/svelte": "^3.1.1",
+		"@types/nodemailer": "^7.0.2",
+		"@xenova/transformers": "^2.17.2",
+		"altcha": "^2.2.4",
+		"altcha-lib": "^1.3.0",
+		"nodemailer": "^7.0.6"
 	}
 }
